# gofile-api

./: .gitignore  Cargo.toml  README.md  build-release.ps1
app/: README.md
app/src/: app.js  index.html  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
docs/: gofile-api-reference.md
examples/: upload.rs
scripts/: Get-GofileAccount.ps1
src/: client.rs  error.rs  lib.rs  models.rs  region.rs
