[package]
name = "gofile-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Async Rust client for the Gofile.io REST API, focused on automating uploads to a paid account."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rustbeard86/gofile-api"
documentation = "https://docs.rs/gofile-api"
readme = "README.md"
keywords = ["gofile", "upload", "storage", "api", "client"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "multipart",
    "stream",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
mime_guess = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []
